# ANTIMANIC

./: CONCLUSION.md  COPYRIGHT  LICENSE  README.md  mini-installer-windows.iso  pubspec.yaml  tools_inspect_fingerprint_db.py  tools_smoke_imports_mlbrain.py
.github/workflows/: sync.yml
ArshanCore/: Barrel (Clean).fpe  Yurt.fpe  lvl1village.fpm  yurt.x  yurt_texture_D.dds
DataLake/MANIC/: ALLMLSARESINNERS.txt  ALLWARS.txt  LOGSTODAYBAREMETAL.txt  README.md  SINNERS.txt  codymdconversation.txt
SECURITY/: 1.cpp  2.cpp  3.cpp  4.cpp  CON.cpp  Encrypter.Designer.cs  Encrypter.cs  FileProcessor.cs  Program.cs  QTE.py  README.md  snake.cs
SECURITY/vcademy/: ImmutableType.cs  InheritanceVirtualType.cs  Program.cs  VEEAM SINNERS.txt
assets/: FreeF1GirlEng.m4a  FreeGirlFrance.m4a  FreeGirlGerman.m4a  ambient2.m4a  bieber_angry.m4a
autonomous/: TERRYDAVISTEMPLEOS.MD
ethernet/: README.md
ethernet/nsfw/: README.md  requirements.txt
ethernet/nsfw/src/: main.py
iso_builder/: Dockerfile  README.md  build_iso.sh  build_iso_windows.ps1  mkinitramfs.py
iso_builder/iso/boot/: installer.sh
lib/: main.dart
lib/api/: nsfw_detector.dart  rest.dart  runway_video.dart
lib/screens/: HomeScreen.dart  check_answers.dart  home.dart  login_screen.dart  quiz_finished.dart  quiz_page.dart  video_screen.dart
lib/utils/: auth_util.dart  data_uri_maker.dart  error.dart  image_censor.dart  text_censor.dart
mcore/: Cargo.toml  README.MD  linker.rc  q.py  sda.py
tools/flutter_gui/: README.md  pubspec.yaml
tools/mcp_dart_copilot/: README.md  main.dart
(+4 files in other folders)
