[package]
name = "mcore"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcore"
path = "mcore/src/main.rs"

[dependencies]
# В ядре (no_std) нам не нужны внешние зависимости типа windows-sys
# Если понадобятся, добавим строго no_std совместимые

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort" # Критично для bare-metal без стандартной библиотеки
# Это заставит Cargo само собрать библиотеку core
[unstable]
build-std = ["core", "compiler_builtins"]
build-std-features = ["compiler-builtins-mem"]